Implemented swager and scaler perfectly
